--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ cosmwasm-std = { version = "1.0.0-beta8", features = ["staking"] }
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 cw-storage-plus = "0.13.4"
 cw-utils = "0.13"
+sha3 = "0.9"
