--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 cw-storage-plus = "0.13.4"
 cw-utils = "0.13"
 sha3 = "0.9"
+sha2 = { version = "0.10", default-features = false }
+generic-array = "0.14.7"
+base64ct = "1.6.0"
